[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/SettingsSurvey.gd" type="Script" id=1]

[node name="SettingsSurvey" type="Control"]
margin_right = 464.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 464.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PRE-MAZE SURVEY"
align = 1
valign = 1

[node name="SettingsBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -207.0
margin_top = -550.0
margin_right = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeDialogue" type="Control" parent="SettingsBox"]
margin_right = 415.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/VolumeDialogue"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DIALOGUE VOLUME"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="SettingsBox/VolumeDialogue"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -25.0
margin_bottom = 25.0
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 21
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeMusic" type="Control" parent="SettingsBox"]
margin_top = 50.0
margin_right = 415.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="SettingsBox/VolumeMusic"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MUSIC VOLUME"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="SettingsBox/VolumeMusic"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -25.0
margin_bottom = 25.0
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 21
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSFX" type="Control" parent="SettingsBox"]
margin_top = 100.0
margin_right = 415.0
margin_bottom = 150.0

[node name="Label" type="Label" parent="SettingsBox/VolumeSFX"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SFX VOLUME"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="SettingsBox/VolumeSFX"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -25.0
margin_bottom = 25.0
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 21
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pinger" type="Control" parent="SettingsBox"]
margin_top = 200.0
margin_right = 415.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/Pinger"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PING THING"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="SettingsBox/Pinger"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -25.0
margin_bottom = 25.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="SettingsBox/Pinger"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -24.0
margin_bottom = 26.0
max_value = 1.0
step = 0.05
value = 1.0
editable = false
tick_count = 21
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitles" type="Control" parent="SettingsBox"]
margin_top = 250.0
margin_right = 415.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/Subtitles"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SUBTITLES"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="SettingsBox/Subtitles"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -25.0
margin_bottom = 25.0
pressed = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DynamicText" type="Control" parent="SettingsBox"]
margin_top = 300.0
margin_right = 415.0
margin_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/DynamicText"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DYNAMIC TEXT"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="SettingsBox/DynamicText"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -25.0
margin_bottom = 25.0
pressed = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGVideo" type="Control" parent="SettingsBox"]
margin_top = 350.0
margin_right = 415.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/BGVideo"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BACKGROUND VIDEO"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="SettingsBox/BGVideo"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -25.0
margin_bottom = 25.0
pressed = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyRebind" type="Control" parent="SettingsBox"]
margin_top = 400.0
margin_right = 415.0
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/KeyRebind"]
margin_right = 100.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REBIND KEYS"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RebindBox" type="Control" parent="SettingsBox/KeyRebind"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -315.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneButton" type="Control" parent="SettingsBox"]
margin_top = 500.0
margin_right = 415.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="SettingsBox/DoneButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -25.0
margin_right = 50.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
text = "DONE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="SettingsBox/VolumeDialogue/HSlider" to="." method="_on_DialogueSlider_value_changed"]
[connection signal="value_changed" from="SettingsBox/VolumeMusic/HSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SettingsBox/VolumeSFX/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SettingsBox/Pinger/HSlider" to="." method="_on_PingSlider_value_changed"]
[connection signal="toggled" from="SettingsBox/Subtitles/CheckBox" to="." method="_on_SubtitlesBox_toggled"]
[connection signal="pressed" from="SettingsBox/DoneButton/Button" to="." method="_on_Button_pressed"]
